# Skidmark

./: .gitignore  Cargo.toml  a.sk  b.sk  c.sk  readme.md
src/: args.rs  closures.rs  console.rs  error.rs  main.rs  project.rs  projectparse.rs  reservednames.rs  stringtools.rs  types.rs
src/blocktypes/: mod.rs
src/macros/: clear.rs  for_each.rs  include.rs  insert.rs  mod.rs  simple_blocks.rs  simple_macros.rs  template.rs
