[package]
name = "skidmark"
version = "2025.11.14"
edition = "2021"
repository = "https://github.com/Tholp1/Skidmark" # for cargo-dist, also available at https://tangled.org/@tholps.site/skidmark

[dependencies]
boa_engine = "0.20.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
glob = "0.3.2"
markdown = "1.0.0"
serde = "1.0.218"
toml = "0.8.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
